@@ -6,6 +6,7 @@ import java.util.Map;
 import java.util.Set;
 
 import org.carrot2.clustering.lingo.LingoClusteringAlgorithmDescriptor;
+import org.carrot2.clustering.stc.STCClusteringAlgorithmDescriptor;
 import org.carrot2.core.LanguageCode;
 import org.carrot2.elasticsearch.ClusteringAction.ClusteringActionRequestBuilder;
 import org.carrot2.elasticsearch.ClusteringAction.ClusteringActionResponse;
@@ -13,10 +14,16 @@ import org.carrot2.elasticsearch.ListAlgorithmsAction.ListAlgorithmsActionReques
 import org.carrot2.elasticsearch.ListAlgorithmsAction.ListAlgorithmsActionResponse;
 import org.carrot2.text.clustering.MultilingualClustering.LanguageAggregationStrategy;
 import org.carrot2.text.clustering.MultilingualClusteringDescriptor;
+import org.elasticsearch.ElasticSearchException;
+import org.elasticsearch.action.search.SearchPhaseExecutionException;
+import org.elasticsearch.action.search.ShardSearchFailure;
 import org.elasticsearch.client.Client;
 import org.elasticsearch.common.collect.Sets;
 import org.elasticsearch.index.query.QueryBuilders;
+import org.elasticsearch.search.SearchParseElement;
+import org.elasticsearch.search.SearchParseException;
 import org.fest.assertions.api.Assertions;
+import org.testng.Assert;
 import org.testng.annotations.DataProvider;
 import org.testng.annotations.Test;
 
@@ -139,6 +146,114 @@ public class JavaApiTests extends AbstractApiTest {
             .isNotEmpty()
             .contains("stc", "lingo", "kmeans");
     }
+
+    @Test(dataProvider = "clients")
+    public void testNonexistentFields(Client client) throws IOException {
+        ClusteringActionResponse result = new ClusteringActionRequestBuilder(client)
+            .setQueryHint("data mining")
+            .addFieldMapping("_nonexistent_", LogicalField.TITLE)
+            .addFieldMapping("_nonexistent_", LogicalField.CONTENT)
+            .setSearchRequest(
+              client.prepareSearch()
+                    .setIndices(INDEX_NAME)
+                    .setTypes("test")
+                    .setSize(100)
+                    .setQuery(QueryBuilders.termQuery("_all", "data"))
+                    .addFields("title", "content"))
+            .execute().actionGet();
+
+        // There should be no clusters, but no errors.
+        checkValid(result);
+        checkJsonSerialization(result);
+
+        // Top level groups should be input documents' languages (aggregation strategy above).
+        DocumentGroup[] documentGroups = result.getDocumentGroups();
+        for (DocumentGroup group : documentGroups) {
+            if (!group.isOtherTopics()) {
+                Assertions.fail("Expected no clusters for non-existent fields.");
+            }
+        }
+    }
+    
+    @Test(dataProvider = "clients")
+    public void testNonexistentAlgorithmId(Client client) throws IOException {
+        // The query should result in an error.
+        try {
+            new ClusteringActionRequestBuilder(client)
+                .setQueryHint("")
+                .addFieldMapping("_nonexistent_", LogicalField.TITLE)
+                .setAlgorithm("_nonexistent_")
+                .setSearchRequest(
+                  client.prepareSearch()
+                        .setIndices(INDEX_NAME)
+                        .setTypes("test")
+                        .setSize(100)
+                        .setQuery(QueryBuilders.termQuery("_all", "data"))
+                        .addFields("title", "content"))
+                .execute().actionGet();
+            throw Preconditions.unreachable();
+        } catch (ElasticSearchException e) {
+            Assertions.assertThat(e)
+                .hasMessageContaining("No such algorithm:");
+        }
+    }
+
+    @Test(dataProvider = "clients")
+    public void testInvalidSearchQuery(Client client) throws IOException {
+        // The query should result in an error.
+        try {
+            new ClusteringActionRequestBuilder(client)
+                .setQueryHint("")
+                .addFieldMapping("_nonexistent_", LogicalField.TITLE)
+                .setAlgorithm("_nonexistent_")
+                .setSearchRequest(
+                  client.prepareSearch()
+                        .setExtraSource("{ invalid json; [}")
+                        .setIndices(INDEX_NAME)
+                        .setTypes("test")
+                        .setSize(100)
+                        .setQuery(QueryBuilders.termQuery("_all", "data"))
+                        .addFields("title", "content"))
+                .execute().actionGet();
+            throw Preconditions.unreachable();
+        } catch (SearchPhaseExecutionException e) {
+            ShardSearchFailure[] shardFailures = e.shardFailures();
+            Assertions.assertThat(shardFailures).isNotEmpty();
+            Assertions.assertThat(shardFailures[0].reason())
+                .contains("Parse Failure");
+        }
+    }
+    
+    @Test(dataProvider = "clients")
+    public void testPropagatingAlgorithmException(Client client) throws IOException {
+        // The query should result in an error.
+        try {
+            Map<String,Object> attrs = Maps.newHashMap();
+            // Out of allowed range (should cause an exception).
+            STCClusteringAlgorithmDescriptor.attributeBuilder(attrs)
+                .ignoreWordIfInHigherDocsPercent(Double.MAX_VALUE);
+
+            new ClusteringActionRequestBuilder(client)
+                .setQueryHint("")
+                .addFieldMapping("title", LogicalField.TITLE)
+                .addFieldMapping("content", LogicalField.CONTENT)
+                .setAlgorithm("stc")
+                .addAttributes(attrs)
+                .setSearchRequest(
+                  client.prepareSearch()
+                        .setIndices(INDEX_NAME)
+                        .setTypes("test")
+                        .setSize(100)
+                        .setQuery(QueryBuilders.termQuery("_all", "data"))
+                        .addFields("title", "content"))
+                .execute().actionGet();
+            throw Preconditions.unreachable();
+        } catch (ElasticSearchException e) {
+            Assertions.assertThat(e)
+                .hasMessageContaining("Search results clustering error:")
+                .hasMessageContaining(STCClusteringAlgorithmDescriptor.Keys.IGNORE_WORD_IF_IN_HIGHER_DOCS_PERCENT);
+        }
+    }    
 }
 
 
